# patent-kit

./: .gitignore  .prettierignore  .prettierrc  .rumdl.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mise.toml  package-lock.json  package.json  pyproject.toml
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: patent-kit.evaluation.md  patent-kit.infringement.md  patent-kit.prior.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/prompts/: patent-kit.evaluation.prompt.md  patent-kit.infringement.prompt.md  patent-kit.prior.prompt.md
.github/workflows/: ci.yml  codeql.yml  release.yml
.patent-kit/memory/: constitution.md
.patent-kit/scripts/: merge.py
.patent-kit/templates/: evaluation-template.md  hearing-template.md  infringement-template.md  prior-template.md
agents/patent-evaluator/: agent.md
agents/pr-healer/: auto-heal.sh  commit-and-push.sh  healer.sh  prompt.txt
agents/skill-bench/: runner.sh
agents/test-runner/: progress.jsonl  prompt.txt  runner.sh
cases/concept-interview/: functional-no-spec.toml  functional-with-spec.toml  triggering.toml
cases/concept-interviewing/: functional-no-spec.toml  functional-with-spec.toml  triggering.toml
cases/constitution/: functional.toml  triggering.toml
cases/constitution-reminding/: functional.toml  triggering.toml
cases/legal-checker/: functional.toml  triggering.toml
cases/legal-checking/: functional-file-review.toml  functional.toml  triggering.toml
cases/setup/: functional.toml  triggering.toml
wix/: main.wxs
(+384 files in other folders)
