[package]
name = "patent-kit"
version = "0.0.4"
authors = ["sonesuke <sonesuke@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rust-embed = "8.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
tempfile = "3.8"

[[bin]]
name = "ftoc"
path = "src/bin/ftoc.rs"
